--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <version>1.0-SNAPSHOT</version>
 
   <properties>
-    <sfwsc.version>39.0.5</sfwsc.version>
+    <sfwsc.version>41.0.0</sfwsc.version>
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.compiler.source>1.8</maven.compiler.source>
   </properties>
@@ -23,7 +23,7 @@
     <dependency>
       <groupId>com.force.api</groupId>
       <artifactId>force-partner-api</artifactId>
-      <version>39.0.0</version>
+      <version>${sfwsc.version}</version>
     </dependency>
   </dependencies>
   <build>
